--- a/index.html
+++ b/index.html
@@ -16,23 +16,21 @@
   </head>
   <body>
     <div id="map"></div>
+    
     <script>
       var map = L.map('map').setView([48.803490, 9.525980], 16);
 
       L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
         attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
       }).addTo(map);
-
-      L.marker([48.805533969522926, 9.524888840805946]).addTo(map)
-        .bindPopup('Saufen!')
-        .openPopup();
-      L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-        attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
-      }).addTo(map);
-
       L.marker([48.80817436419389, 9.537522969641579]).addTo(map)
         .bindPopup('Kotzen!')
         .openPopup();
+
+      L.marker([48.805533969522926, 9.524888840805946]).addTo(map)
+        .bindPopup('<b>Engel!</b><p>Come in and Kotz out!</p><i>Lorem Ipsum</i>')
+        .openPopup();
+
     </script>
   </body>
 </html>
